# fastapi-debug-toolbar

./: .gitignore  404.html  CHANGELOG.md  CHANGES.md  CNAME  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build.yml  docs.yml  publish.yml  test-suite.yml
changelog/: index.html
css/: styles.css
debug_toolbar/: api.py  dependencies.py  middleware.py  responses.py  settings.py  sql.py  toolbar.py  types.py  utils.py
debug_toolbar/panels/: __init__.py  headers.py  logging.py  profiling.py  pydantic.py  redirects.py  request.py  routes.py  settings.py  sql.py  sqlalchemy.py  timer.py  tortoise.py  versions.py
debug_toolbar/statics/css/: print.css  toolbar.css
debug_toolbar/statics/js/: history.js  refresh.js  timer.js  toolbar.js  utils.js  versions.js
debug_toolbar/templates/: base.html  redirect.html
debug_toolbar/templates/includes/: panel_button.html  panel_content.html
debug_toolbar/templates/panels/: headers.html  logging.html  profiling.html  pydantic.html  request.html  routes.html  settings.html  sql.html  sqlalchemy.html  template.html  timer.html  versions.html
docs/: index.md  settings.md
docs/css/: styles.css
docs/panels/: built-in.md  default.md  dev.md  doc.md  panel.md  sql.md
docs/src/: quickstart.py
docs/src/panels/: profiling.py  settings.py
overrides/: main.html
panels/default/: index.html
panels/dev/: index.html
panels/panel/: index.html
panels/sql/: index.html
scripts/: lint  lint.sh  test  test.sh
search/: search_index.json
settings/: index.html
src/: quickstart.py
src/dev/: panels.py  quickstart.py
src/panels/: settings.py  tortoise.py
src/panels/sqlalchemy/: add_engines.py  panel.py
tests/: conftest.py  decorators.py  main.py  mark.py  templates.py  test_api.py  test_middleware.py  testclient.py
tests/panels/: test_headers.py  test_logging.py  test_profiling.py  test_pydantic.py  test_redirects.py  test_request.py  test_routes.py  test_settings.py  test_timer.py  test_versions.py
tests/panels/sqlalchemy/: conftest.py  crud.py  database.py  models.py  test_sqlalchemy.py
tests/panels/tortoise/: conftest.py  crud.py  models.py  test_tortoise.py
